# CommonAPI-generation

./: reproduce.sh
E00HelloWorld/: .gitignore  CMakeLists.txt  clean.sh  prepare.sh
E00HelloWorld/src/: HelloWorldClient.cpp  HelloWorldStubImpl.cpp
E01HelloWorld/: CMakeLists.txt  VM_built.sh  prepare.sh
E01HelloWorld/src/: E01HelloWorldClient.cpp
tools/Sources/: SOURCES
tools/VM_CommonAPI_C++/: .gitignore  build_VM.sh  clean.sh  get_capicxx_from_git.sh  unzip.sh
